fixed gaps between revision history items

--- a/src/components/revision-history.css
+++ b/src/components/revision-history.css
@@ -61,12 +61,16 @@
 .history-item {
     background-color: var(--history-background);
     color: var(--history-foreground);
-    border-left: 0.2rem solid var(--history-foreground);
     width: 90%;
-    margin-top: 0.5rem;
-    padding-left: 0.5rem;
     cursor: pointer;
     transition: 0.2s;
+}
+
+.history-item-inside {
+    margin-top: 0.5rem;
+    border-left: 0.2rem solid var(--history-foreground);
+    padding-left: 0.5rem;
+    display: inline-block;
 }
 
 .history-item:hover,
